# message-broker

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.h  channel.h  channel_manager.h  connection.h  message_parser.h  message_server.h
proto/: message.pb.cc  message.pb.h  message.proto
src/: buffer.cpp  channel_manager.cpp  connection.cpp  message_parser.cpp  message_server.cpp
test/: CMakeLists.txt  bufferTest.cpp  parserTest.cpp
